wayback machine styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ layout: default
 
 <div class="home">
 <div id="circle">
-
+<h1>Anyisland Creative</h1>
+<h2><a href="anyislandcreative@gmail.com">EMAIL US</a></h2>
 </div>
 </div>
 
